# inas-device-hub

./: .default.env  .gitignore  AGENTS.md  OPERATIONS.md  README.md  pyproject.toml  serve.sh  setup.md  start.sh
data/: instagram_caption_prompt.txt
deployment/mosquitto/: ina-device-hub.conf
doc/: ENVIRONMENT.md
doc/spec/: 00-overview.md  README.md  mqtt-server-spec.md
doc/spec/components/: README.md  account_setup.md  camera_connector.md  camera_device_repository.md  class_diagram.puml  data_processor.md  event_task_flow.puml  general_log.md  hub_mqtt_client.md  ina_db_connector.md  location_repository.md  periodic_task_flow.puml  sensor_data_queue.md  sensor_data_repository.md  sensor_device_repository.md  sensor_image_repogitory.md  sequence_diagram.puml  serve.md  setting.md  storage_connector.md  utils.md  (+3 more)
scripts/: hub_service.sh  install_service.sh  migrate_local_files.sh  setup_config_server.sh
src/ina_device_hub/: __init__.py  ai_connector.py  ai_content_service.py  app.py  camera_connector.py  camera_device_repository.py  camera_image_repository.py  data_processor.py  device_config_repository.py  device_config_service.py  device_event_log.py  discord_notification_service.py  general_log.py  hub_mqtt_client.py  image_utils.py  ina_agent.py  ina_db_connector.py  ina_env.py  instagram_client.py  instagram_feedback_policy.py  instagram_post_task.py  instagram_poster.py  instagram_util.py  location_repository.py  notification.py  open_meteo_weather_service.py  post_image_repository.py  sensor_data_queue.py  sensor_data_repository.py  sensor_device_repository.py  sensor_image_repogitory.py  sensor_task.py  serve.py  setting.py  storage_connector.py  test.py  timelapse_media_service.py  timelapse_task.py  utils.py  weather_forecast_service.py  (+3 more)
systemd/: inas-device-hub.service  inas-device-hub@.service
tests/: test_device_event_log.py  test_discord_notification_service.py  test_instagram_feedback_policy.py  test_mqtt_device_config_service.py  test_open_meteo_weather_service.py  test_weather_forecast_service.py  test_weather_record_repository.py
(+5 files in other folders)
